Update Java versions